added smooth scroll and id footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link active" href="#"><i class="fas fa-home me-1" aria-hidden="true"></i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-info-circle me-1" aria-hidden="true"></i>About</a>
+                        <a class="nav-link" href="#footer"><i class="fas fa-info-circle me-1" aria-hidden="true"></i>About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#watchlist"><i class="fas fa-list me-1"
@@ -165,7 +165,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class="footer-content">
                 <!-- Social Links -->
