added movie listings js and css

--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
             </div>
         </section>
 
+        <section class="movie-listings-section py-5">
+            <div class="container">
+                <h2 class="mb-4">Movie Results</h2>
+                <div id="movieListings" class="movie-listings-grid">
+                    <!-- Movie listings will be dynamically inserted here -->
+                </div>
+            </div>
+        </section>
+
     <!-- Reviews Section -->
     <section class="reviews-section py-5 bg-light">
         <div class="container">
