add reelrate_favorites-movies id in html

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <h2 class="mb-4" id="watchlist">
                         <i class="fas fa-list me-2" aria-hidden="true"></i>Your Watchlist
                     </h2>
-                    <div class="movie-container" id="watchlist-movies" role="list">
+                    <div class="movie-container" id="reelrate_watchlist-movies" role="list">
                         <!-- Watchlist movies will be dynamically inserted here -->
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                     <h2 class="mb-4" id="favorites">
                         <i class="fas fa-heart me-2" aria-hidden="true"></i>Your Favorites
                     </h2>
-                    <div class="movie-container" id="favorites-movies" role="list">
+                    <div class="movie-container" id="reelrate_favorites-movies" role="list">
                         <!-- Favorite movies will be dynamically inserted here -->
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                     <ul>
                         <li><a href="#">Help Center</a></li>
                         <li><a href="#">Site Index</a></li>
-                        <li><a href="#">MovieRatingsPro</a></li>
+                        <li><a href="#">RateReelsPro</a></li>
                         <li><a href="#">Box Office Data</a></li>
                         <li><a href="#">API Services</a></li>
                     </ul>
@@ -229,7 +229,7 @@
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Cookie Preferences</a></li>
                     </ul>
-                    <p class="copyright">© 1990-2024 MovieRatings.com, Inc. All rights reserved.</p>
+                    <p class="copyright">© 1990-2024 RateReels.com, Inc. All rights reserved.</p>
                 </nav>
             </div>
         </div>
